# CQLite

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  test_database.py
.github/workflows/: makefile.yml
src/: input.c  lexer.c  main.c  statement.c  table.c
src/include/: input.h  lexer.h  statement.h  table.h  token.h
